fix toolbar height alignment

--- a/server/app/assets/sass/nav.sass
+++ b/server/app/assets/sass/nav.sass
@@ -17,6 +17,9 @@ body
 .side-nav
   width: 320px
 
+nav
+  min-height: 68px
+
 #nav-logo-container
   position: relative
 
